# logreg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.dvc/: config
data/: test.csv.dvc  train.csv.dvc
logreg/: infer.py  main.py  mnist.py  model.pth  model.py  predictions.csv  train.py  train_test.py
logreg/conf/: test_config.yaml  train_config.yaml
